--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.6",
+    "aws-sdk": "^2.671.0",
     "cookie-parser": "~1.4.4",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "@types/config": "0.0.36",
+    "config": "^3.3.1"
   }
 }
