--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
+    "@types/passport-local": "^1.0.33",
     "aws-sdk": "^2.671.0",
     "cookie-parser": "~1.4.4",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "bcrypt-nodejs": "0.0.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "jsonwebtoken": "^8.4.0"
   },
   "devDependencies": {
     "@types/config": "0.0.36",
