--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
+    "@types/graphql-type-json": "^0.3.2",
+    "@types/uniqid": "^4.1.3",
     "aws-sdk": "^2.671.0",
     "cookie-parser": "~1.4.4",
-    "express": "^4.16.4",
+    "uniqid": "^5.2.0",
     "bcrypt-nodejs": "0.0.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "jsonwebtoken": "^8.4.0"
+    "jsonwebtoken": "^8.4.0",
+    "apollo-server-express": "^2.11.0",
+    "class-validator": "^0.11.0",
+    "express": "^4.17.1",
+    "graphql-type-json": "^0.3.1",
+    "graphql": "^14.6.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.6"
   },
   "devDependencies": {
     "@types/config": "0.0.36",
