--- a/package.json
+++ b/package.json
@@ -9,27 +9,33 @@
   "dependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
     "@types/express": "^4.17.6",
+    "@types/graphql-type-json": "^0.3.2",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
-    "@types/graphql-type-json": "^0.3.2",
     "@types/uniqid": "^4.1.3",
+    "any-observable": "^0.5.1",
+    "apollo-server-express": "^2.11.0",
     "aws-sdk": "^2.671.0",
-    "cookie-parser": "~1.4.4",
-    "uniqid": "^5.2.0",
     "bcrypt-nodejs": "0.0.3",
+    "class-validator": "^0.11.0",
+    "cookie-parser": "~1.4.4",
+    "cypher-query-builder": "^5.0.4",
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
+    "graphql-type-json": "^0.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "neo4j-driver": "^1.7.3",
+    "neo4j-graphql-js": "^2.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "jsonwebtoken": "^8.4.0",
-    "apollo-server-express": "^2.11.0",
-    "class-validator": "^0.11.0",
-    "express": "^4.17.1",
-    "graphql-type-json": "^0.3.1",
-    "graphql": "^14.6.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.6"
+    "type-graphql": "^0.17.6",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@types/config": "0.0.36",
