--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.6",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^8.4.0",
     "neo4j-driver": "^1.7.3",
     "neo4j-graphql-js": "^2.4.2",
+    "nodemailer": "^6.4.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
