--- a/package.json
+++ b/package.json
@@ -12,26 +12,22 @@
     "@types/graphql-type-json": "^0.3.2",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/nodemailer": "^6.4.0",
+    "@types/ioredis": "^4.16.2",
     "@types/passport": "^1.0.0",
-    "@types/passport-jwt": "^3.0.1",
-    "@types/passport-local": "^1.0.33",
     "@types/uniqid": "^4.1.3",
-    "any-observable": "^0.5.1",
     "apollo-server-express": "^2.11.0",
     "aws-sdk": "^2.671.0",
     "bcrypt-nodejs": "0.0.3",
     "class-validator": "^0.11.0",
     "cookie-parser": "~1.4.4",
-    "cypher-query-builder": "^5.0.4",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
     "graphql": "^14.6.0",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.4",
+    "graphql-redis-subscriptions": "^2.2.1",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-type-json": "^0.3.1",
+    "ioredis": "^4.17.1",
     "jsonwebtoken": "^8.4.0",
     "neo4j-driver": "^1.7.3",
-    "neo4j-graphql-js": "^2.4.2",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
