--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql-redis-subscriptions": "^2.2.1",
     "graphql-subscriptions": "^1.1.0",
     "graphql-type-json": "^0.3.1",
+    "graphql-upload": "^10.0.0",
     "ioredis": "^4.17.1",
     "jsonwebtoken": "^8.4.0",
     "neo4j-driver": "^1.7.3",
