--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "classi-backend",
   "version": "0.0.0",
   "private": true,
+  "main": "graphql.js",
   "scripts": {
     "start": "npm run build && node built/app.js",
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "npm run build && serverless deploy"
   },
   "dependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
@@ -14,13 +16,23 @@
     "@types/nodemailer": "^6.4.0",
     "@types/ioredis": "^4.16.2",
     "@types/passport": "^1.0.0",
-    "@types/uniqid": "^4.1.3",
-    "apollo-server-express": "^2.11.0",
+    "@types/aws-lambda": "^8.10.51",
     "aws-sdk": "^2.671.0",
     "bcrypt-nodejs": "0.0.3",
     "class-validator": "^0.11.0",
     "cookie-parser": "~1.4.4",
+    "inversify": "^5.0.1",
+    "terser-webpack-plugin": "^3.0.2",
     "express": "^4.17.1",
+    "webpack": "^4.43.0",
+    "webpack-node-externals": "^1.7.2",
+    "serverless-webpack": "^5.3.2",
+    "serverless-offline": "^6.1.7",
+    "serverless-dynamodb-local": "^0.2.39",
+    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "apollo-server-lambda": "^2.13.1",
+    "graphql-playground-middleware-lambda": "^1.7.15",
+    "aws-serverless-express": "^3.3.8",
     "graphql": "^14.6.0",
     "graphql-redis-subscriptions": "^2.2.1",
     "graphql-subscriptions": "^1.1.0",
@@ -31,14 +43,15 @@
     "neo4j-driver": "^1.7.3",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@types/config": "0.0.36",
-    "config": "^3.3.1"
+    "config": "^3.3.1",
+    "serverless-plugin-typescript": "^1.1.9",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3"
   }
 }
