--- a/serverless.yml
+++ b/serverless.yml
@@ -31,3 +31,33 @@ functions:
       - http:
           path: graphql
           method: GET
+
+resources: # CloudFormation template syntax from here on.
+  Resources:
+    classesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: classesTable
+        AttributeDefinitions:
+          - AttributeName: classId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: classId
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
+
+    postsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: postsTable
+        AttributeDefinitions:
+          - AttributeName: postId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: postId
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
