--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,17 @@ provider:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
+  iamRoleStatements: # permissions for all of your functions can be set here
+    - Effect: Allow
+      Action: # Gives permission to DynamoDB tables in a specific region
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: 'arn:aws:dynamodb:us-east-1:031310277846:*'
 
 functions:
   graphql:
@@ -31,33 +42,4 @@ functions:
       - http:
           path: graphql
           method: GET
-
-resources: # CloudFormation template syntax from here on.
-  Resources:
-    classesTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: classesTable
-        AttributeDefinitions:
-          - AttributeName: classId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: classId
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 5
-          WriteCapacityUnits: 5
-
-    postsTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: postsTable
-        AttributeDefinitions:
-          - AttributeName: postId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: postId
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 5
-          WriteCapacityUnits: 5
+          cors: true
