--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
+        "outDir": "./dist",
         "esModuleInterop": true,
         "target": "es2018",
         "module": "commonjs",
