--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "terser-webpack-plugin": "^3.0.2",
     "type-graphql": "^0.17.6",
     "uniqid": "^5.2.0",
+    "uuidv4": "^6.2.0",
     "webpack": "^4.43.0",
     "webpack-node-externals": "^1.7.2"
   },
