--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/passport": "^1.0.0",
     "apollo-server": "^2.16.0",
     "apollo-server-lambda": "^2.13.1",
+    "argon2": "^0.26.2",
     "aws-sdk": "^2.671.0",
     "bcrypt-nodejs": "0.0.3",
     "class-validator": "^0.11.0",
