--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/passport": "^1.0.0",
     "apollo-server": "^2.16.0",
     "apollo-server-lambda": "^2.13.1",
-    "argon2": "^0.26.2",
     "aws-sdk": "^2.671.0",
+    "bcrypt": "^5.0.0",
     "bcrypt-nodejs": "0.0.3",
     "class-validator": "^0.11.0",
     "cookie-parser": "~1.4.4",
@@ -48,7 +48,9 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/config": "0.0.36",
+    "@types/gremlin": "^3.4.6",
     "config": "^3.3.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3"
