--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,14 @@ provider:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
+  vpc:
+    securityGroupIds:
+      - sg-0afc96ad662ea3ee2
+      - sg-06b8459f3d7d4ade5
+    subnetIds:
+      - subnet-03871e84435680f08
+      - subnet-0d47f36b46dc59b49
+      - subnet-05910b397d8574054
   iamRoleStatements: # permissions for all of your functions can be set here
     - Effect: Allow
       Action: # Gives permission to DynamoDB tables in a specific region
