--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "apollo-server": "^2.16.0",
     "apollo-server-lambda": "^2.13.1",
     "aws-sdk": "^2.671.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "2.4.3",
     "bcrypt-nodejs": "0.0.3",
     "class-validator": "^0.11.0",
     "cookie-parser": "~1.4.4",
