Class controller changes

--- a/serverless.yml
+++ b/serverless.yml
@@ -51,3 +51,4 @@ functions:
           path: graphql
           method: GET
           cors: true
+      - cloudwatchLog: '/aws/lambda/classi-backend-dev-graphql'
